New figures and small changes

--- a/appendices.tex
+++ b/appendices.tex
@@ -1,9 +1,9 @@
 
 \chapter{Software availability}
+\label{appendix_software}
 
 \section{Radar data processing code}
 The software for the radar data extraction and re-gridding for use in the HAIL-CAESAR/CAESAR-Lisflood models is available at the online software repository GitHub at: \url{https://github.com/dvalters/nimrod-toolbox/releases/tag/0.2}
-
 
 \section{HAIL-CAESAR landscape evolution model code}
 The HAIL-CAESAR landscape evolution modelling software is available at the online software repository GitHub at: \url{https://github.com/dvalters/HAIL-CAESAR/releases/tag/v0.9}
@@ -67,6 +67,7 @@ The code used to plot figures from the model simulation output in this thesis wa
 %\chapter{HPC computing simulations: set-up and compilation}
 %
 \chapter{Paper reprint}
+\label{appendix_paper}
 
 \textbf{Modelling Geomorphic Systems: Landscape Evolution}
 
