--- a/chapter_events.tex
+++ b/chapter_events.tex
@@ -1,4 +1,4 @@
-\chapter{Numerical simulation of two flash flood events in the UK}
+\chapter{Model set up and parameterisation of two flash flood events in the UK}
 \label{chapter_events}
 \chaptermark{Severe storms in Cornwall and northern England}
 
