--- a/chapter_floodinundation.tex
+++ b/chapter_floodinundation.tex
@@ -228,7 +228,7 @@ In the main channel of the River Rye, peak water depths range from approximately
 Thus far, the analysis of the model output has concerned catchment wide hydrological outputs and average water depths during flooding in the form of two-dimensional time series. The following section considers the spatial distribution of floodwaters across the catchments at the peak of each flood event. Comparisons between the spatial distribution of floodwaters under different model parameterisations are presented in Figures \ref{fig_boscastle_2dplan_flood_ensemble_town}, \ref{fig_boscastle_2dplan_flood_ensemble_confluence} (Boscastle), and Figures \ref{fig_ryedale_2dplan_flood_ensemble_floodplain}, \ref{fig_ryedale_2dplan_flood_ensemble_town}, \ref{fig_ryedale_2dplan_flood_ensemble_upstream} (Ryedale). An overview of the catchments and location of the main settlement in each is presented in Figure \ref{fig_boscastle_2dplan_inset_loc} and \ref{fig_ryedale_2dplan_location_insets}.
 
 \subsubsection{Boscastle}
-The Boscastle catchment simulations showed minimal variation in flood inundation extent. Simulations with gridded rainfall input did not result in substantially different predictions of floodwater inundation compared to those with uniform rainfall input. Both sets of simulations reflected the general extent of reported flood water extents \citep{wallingford2005flooding}. Simulations that allowed erosion to take place (\texttt{GRID\_TLIM} and \texttt{UNIFORM\_TLIM}) showed a slight difference in the variation of floodwater depths in the floodplain area, particularly in the vicinity of Boscastle village, where Figure \ref{fig_boscastle_2dplan_flood_ensemble_town} is centred on. In hydrological-only simulations, the deepest water depths were predicted to occur in the confines of the river channel, whereas in erosion-enabled simulations, there appeared to be a `smoothing' effect of water depths between the channel and the adjacent floodplain, suggesting that the channel geometry had altered during the flood event either by infilling from sediment from upstream or collapse of the adjacent river banks -- this effect is particularly evident in Figure \ref{fig_boscastle_2dplan_flood_ensemble_confluence}. Post-event reports of the Boscastle flood noted that the river channel in the Boscastle village area had indeed been inundated with debris during the storm, which had potentially contributed to the extent of the flooding within the village. The debris blockage of the  river channel as it flowed under the road bridge in the centre of the village was also noted as a potential contributory factor to the pattern of flood inundation during the storm. Overall, the results from the Boscastle simulations indicate that although the general differences in flood extent are minimal, there are small localised variations in the distribution of flood water depths at key locations, which can be attributed to the parameterisation of erosional processes in the simulations (Figure \ref{fig_boscastle_2dplan_flood_ensemble_town} and \ref{fig_boscastle_2dplan_flood_ensemble_confluence}).
+The Boscastle catchment simulations showed minimal variation in flood inundation extent. Simulations with gridded rainfall input did not result in substantially different predictions of floodwater inundation compared to those with uniform rainfall input. Both sets of simulations reflected the general extent of reported flood water extents \citep{wallingford2005flooding}. Simulations that allowed erosion to take place (\texttt{GRIDDED\_TLIM} and \texttt{UNIFORM\_TLIM}) showed a slight difference in the variation of floodwater depths in the floodplain area, particularly in the vicinity of Boscastle village, where Figure \ref{fig_boscastle_2dplan_flood_ensemble_town} is centred on. In hydrological-only simulations, the deepest water depths were predicted to occur in the confines of the river channel, whereas in erosion-enabled simulations, there appeared to be a `smoothing' effect of water depths between the channel and the adjacent floodplain, suggesting that the channel geometry had altered during the flood event either by infilling from sediment from upstream or collapse of the adjacent river banks -- this effect is particularly evident in Figure \ref{fig_boscastle_2dplan_flood_ensemble_confluence}. Post-event reports of the Boscastle flood noted that the river channel in the Boscastle village area had indeed been inundated with debris during the storm, which had potentially contributed to the extent of the flooding within the village. The debris blockage of the  river channel as it flowed under the road bridge in the centre of the village was also noted as a potential contributory factor to the pattern of flood inundation during the storm. Overall, the results from the Boscastle simulations indicate that although the general differences in flood extent are minimal, there are small localised variations in the distribution of flood water depths at key locations, which can be attributed to the parameterisation of erosional processes in the simulations (Figure \ref{fig_boscastle_2dplan_flood_ensemble_town} and \ref{fig_boscastle_2dplan_flood_ensemble_confluence}).
 
 \subsubsection{Ryedale}
 The Ryedale simulations showed less variation in flood extents between the gridded rainfall and uniform rainfall inputs. The flood extents were only slightly greater in the gridded rainfall input simulations, despite the much higher peak discharges predicted in these simulations (Figure \ref{fig_ryedale_hydrograph_ensemble}). The main areas where flood extents were greater were in the floodplain area south of Helmsley (Figure \ref{fig_ryedale_2dplan_flood_ensemble_floodplain}) and in certain places around the settlement of Helmsley (Figure \ref{fig_ryedale_2dplan_flood_ensemble_town}).  The variation in water depths appeared to be less sensitive in comparison to the Boscastle simulations. In the lower reaches of the catchment (Figure \ref{fig_ryedale_2dplan_flood_ensemble_town}), there appeared to be little indication that flood extents or water depths were sensitive to the erosion parameterisation, in contrast to the Boscastle simulations.
