--- a/chapter_geomorph.tex
+++ b/chapter_geomorph.tex
@@ -167,7 +167,7 @@ As with the Boscastle simulations, the most obvious contrast in erosion amounts 
 % Full extent erosion maps
 \begin{sidewaysfigure}[t]
 \includegraphics[width=25cm]{chp06_figures_scripts/boscastle_erodediff_grid_tlim.png}
-\caption{Boscastle. Map of extent of catchment change in elevation greater than 0.02m. Change in elevation shown after 72 hours of model simulation using gridded rainfall and the transport limited erosion law. Output from the gridded rainfall input, transport-limited erosion simulatio(GRID\_TLIM). Logarithmic scale for erosion.}
+\caption{Boscastle. Map of extent of catchment change in elevation greater than 0.02m. Change in elevation shown after 72 hours of model simulation using gridded rainfall and the transport limited erosion law. Output from the gridded rainfall input, transport-limited erosion simulatio(GRIDDED\_TLIM). Logarithmic scale for erosion.}
 \label{fig_boscastle_erodediff_grid_tlim}
 \end{sidewaysfigure}
 
@@ -230,7 +230,7 @@ The geomorphological changes from the Boscastle flood were extensively mapped an
 
 Substantial channel widening of up to 3--4 m in places was reported in the HR Wallingford report. These simulations do not directly account for channel widening processes as there is no parameterisation of channel avulsion by lateral forces acting on the river bank within the HAIL-CAESAR model. The model allows indirect channel widening to take place through downcutting by water that has overtopped the channel banks, but this is not the primary mechanism through which channel widening occurs \citep{parker1976cause}. Future enhancements to the HAIL-CAESAR model would be needed to allow lateral channel widening to be investigated in the typical sense, similar to the implementations in \citet{murray1997properties,Coulthard2013}. The simulations presented in this chapter therefore do not fully reflect the channel widening reported in the post-flood geomorphological survey. The over-prediction in downcutting may have occurred in compensation for the lack of a realistic channel widening mechanism in the model.
 
-One area in which the gridded rainfall simulations performed better than the uniform rainfall inputs was in the tributaries in the south-east region of the catchment. The ground survey after the Boscastle flood noted significant amounts of erosion in the tributaries on the south side of the Valency River. The tributary shown in Figure \ref{fig_boscastle_2dplan_erosion_ensemble_SE} was observed as having up to 1--2 m of downcutting along its course. The gridded rainfall, transport-limited simulation \texttt{GRID\_TLIM} more accurately predicted this than the corresponding uniform rainfall input simulations. The regions of the catchment with the highest rainfall input -- mainly the southern and eastern fringes of the catchment (Figure \ref{fig_boscastle_rain_totals}) -- fed into the tributaries that experienced the channel downcutting. In this particular case high resolution rainfall input data can better resolve the pattern of erosion on the ground at a sub-catchment scale.
+One area in which the gridded rainfall simulations performed better than the uniform rainfall inputs was in the tributaries in the south-east region of the catchment. The ground survey after the Boscastle flood noted significant amounts of erosion in the tributaries on the south side of the Valency River. The tributary shown in Figure \ref{fig_boscastle_2dplan_erosion_ensemble_SE} was observed as having up to 1--2 m of downcutting along its course. The gridded rainfall, transport-limited simulation \texttt{GRIDDED\_TLIM} more accurately predicted this than the corresponding uniform rainfall input simulations. The regions of the catchment with the highest rainfall input -- mainly the southern and eastern fringes of the catchment (Figure \ref{fig_boscastle_rain_totals}) -- fed into the tributaries that experienced the channel downcutting. In this particular case high resolution rainfall input data can better resolve the pattern of erosion on the ground at a sub-catchment scale.
 
 Deposition of sediment was observed along most sections of the lower reaches of the Valency floodplain. The transport-limited simulations predicted sediment deposition in the small floodplain areas immediately adjacent to the river channel, but substantially overpredicted the amount of sediment deposition in places, predicting as much as 2--3 m of deposition. Ground surveys, while noting deposition of sediment in many places, reported sediment deposition on the order of centimetres, not metres. A similar overestimation of deposition was present in both the gridded and uniform rainfall simulations, reinforcing the conclusion that the choice and parameterisation of erosion law is a stronger controlling factor than the spatial heterogeneity of rainfall.
 
