--- a/conclusions.tex
+++ b/conclusions.tex
@@ -2,9 +2,9 @@
 \label{chapter_conclusion}
 \chaptermark{Conclusions}
 
-\section{Review of aims and overview}
+\section{Review of aims and overview of results}
 
-I set out to investigate the sensitivity of hydrogeomorphic processes to rainfall spatial variability during intense rainfall events. The aims of the thesis presented in Chpater \ref{chapter_intro} were threefold: two scientific aims and one technological aim to support these. The scientific aims were to investigate the influence of using spatially variable rainfall input data on a) Flood inundation predictions and b) Sediment flux and distribution of erosion and deposition; both aims addressed within the context of flash flooding events from intense rainfall. To address these questions, a hydrodynamic landscape evolution model was developed based on an existing model, capable of carrying out ensemble-style simulations on high-performance computing (HPC) services. To build on previous studies that have investigated the role of rainfall spatial resolution in isolation, or with other competing factors, a secondary variable was introduced: the choice of erosional process parameterisation in the model. This study is believed to be the first to investigate the sensitivity of rainfall resolution and erosional process parameterisation in tandem, and to assess which has the greater control on hydrogeomorphic processes. It is also one of few to investigate the role of these two competing factors within the context of an individual flash flood event induced by intense rainfall. 
+I set out to investigate the sensitivity of hydrogeomorphic processes to rainfall spatial variability during intense rainfall events. The aims of the thesis presented in Chapter \ref{chapter_intro} consisted of two scientific aims and one technological aim to support them. The scientific aims were to investigate the influence of using spatially variable rainfall input data on a) flood inundation predictions and b) sediment flux and distribution of erosion and deposition; both aims addressed within the context of flash flooding events from intense rainfall. To address these questions, a hydrodynamic landscape evolution model was developed based on an existing model, capable of carrying out ensemble-style simulations on high-performance computing (HPC) services (Chapter \ref{chapter_HAIL-CAESAR}. To build on previous studies that have investigated the role of rainfall spatial resolution in isolation, or with other competing factors, a secondary variable was introduced: the choice of erosional process parameterisation in the model. This study is believed to be the first to investigate the sensitivity of rainfall resolution and erosional process parameterisation in tandem, and to assess which has the greater control on hydrogeomorphic processes in river catchments. It is also one of few studies to investigate the role of these two competing factors within the context of an individual flash flooding event from intense rainfall. 
 
 The two core scientific hypotheses (presented in detail in Chapter \ref{chapter_events}, Section \ref{section_experiment_design}) stated:
 
@@ -13,37 +13,58 @@ The two core scientific hypotheses (presented in detail in Chapter \ref{chapter_
 \item Erosional processes in river catchments are sensitive to the spatial distribution of rainfall inputs.
 \end{enumerate}
 
-Summaries of the conclusions made in Chapters \ref{chapter_flood_model_sensitivity} and \ref{chapter_hydrogeomorph} are presented in the following sections:
+These results from the testing of these hypotheses are discussed in the conclusions made in Chapters \ref{chapter_flood_model_sensitivity} and \ref{chapter_hydrogeomorph} and are summarised in the following sections:
 
 \subsection{Flood-inundation model sensitivity}
 Flood inundation model predictions are sensitive to spatial distribution of rainfall inputs, specifically the use of 1km gridded rainfall data, when compared to using uniform avaeraged data as model input. Predicted hydrological discharge is higher using gridded rainfall inputs, though not necessarily more accurate when compared to measured discharges during the respective flood events simulated. In the Boscastle case study, river discharges more closely matched the observed data, whereas in the Ryedale event, uniform rainfall inputs into the model actually produced a better match to observed data. The choice of erosional process parameterisation plays only a secondary role in hydrological response. 
 
-\subsection{Hydrogeomorphic sensitivity}
-Fluvial erosional processes in river catchments are somewhat sensitive to the use of spatially variable rainfall input data to the model, though it is only of secondary importance when compared to the sensitivity observed in the use of different erosional process law parametrisation. The difference in sediment outputs were much greater under a transport-limited type erosion law, compared to a detachment-limited one. The effects from using spatially variable rainfall input data on sediment fluxes were much less noticeable in comparison.
+\subsection{Erosion and sediment flux sensitivity}
+Fluvial erosional processes in river catchments are somewhat sensitive to the use of spatially variable rainfall input data to the model, though it is only of secondary importance when compared to the sensitivity observed in the use of different erosional process law parametrisations. The difference in sediment outputs were much greater under a transport-limited type erosion law, compared to a detachment-limited one. The effects from using spatially variable rainfall input data on sediment fluxes were less noticeable in comparison, but still had a measurable effect on sediment fluxes. Using spatially variable rainfall data increased sediment yields in both case studies and under both types of erosional parameterisation.
 
 \section{Key themes and synthesis}
 
-Extended conclusion here: Remember to state novelty/advancement. Support of other studies. 
+It was set out to determine whether hydrogeomorphic processes in river catchments were sensitive to the spatial detail of rainfall input data. Numerical simulations using a hydrodynamic landscape evolution model have indicated that resolving the spatial detail in rainfall structure during severe storms has a demonstrable effect on both hydrological and sediment fluxes. (e.g. Figures \ref{fig_boscastle_hydrograph_ensemble}, \ref{fig_boscastle_sedigraph_ensemble}, \ref{fig_ryedale_hydrograph_ensemble}, \ref{fig_ryedale_sedigraph_ensemble}). Though the magnitude of the sensitivity varied between experiments, there was a general increase in peak discharge and peak sediment flux in simulations with gridded rainfall data used as the rainfall input, compared to simulations that used a single, spatially uniform value for rainfall. Existing studies investigating landscape evolution model sensitivity to rainfall resolution \citep{coulthard2016sensitivity} have noted similar increases in water discharge and sediment yields when using spatially heterogeneous rainfall data. The results from the experiments presented in this chapter are broadly in agreement with the general findings of \citet{coulthard2016sensitivity} although the timescales simulated in this study are on the order of hours, rather than decades. The results presented here suggest that the effect of rainfall resolution sensitivity applies to hydrogeomorphic processes at the single storm event timescale, as well as landscape evolution over periods of decades to hundreds of years.
 
-It was set out to determine whether hydrogeomorphic processes in river catchments were sensitive to the spatial detail of rainfall input data. Numerical simulations using a hydrodynamic landscape evolution model have indicated that resolving the spatial detail in rainfall structure during severe storms has a demonstrable effect on both hydrological and sediment fluxes. The effect is seen in both catchment-wide fluxes (Figures \ref{fig_boscastle_hydrograph_ensemble}, \ref{fig_boscastle_sedigraph_ensemble}, \ref{fig_ryedale_hydrograph_ensemble}, \ref{fig_ryedale_sedigraph_ensemble}). Though the magnitude of the sensitivity varied between experiments, there was a general increase in water fluxes, and hence sediment flux, in simulations with gridded rainfall data used as the rainfall input, compared to simulations that used a single, uniform value for rainfall. Existing studies investigating landscape evolution model sensitivity to rainfall resolution \citep{coulthard2016sensitivity} have noted similar increases in water discharge and sediment yields when using spatially heterogeneous rainfall data. The results from the experiments presented in this chapter are broadly in agreement with the general findings of \citet{coulthard2016sensitivity} although the timescales involved in each study are of different magnitudes. The results presented here suggest that the effect of rainfall resolution sensitivity applies to hydrogeomorphic processes at the single-event time scale, as well as landscape evolution over periods of hundreds and thousands of years.
-
-Increasing the resolution of rainfall input data may not be enough to observe sensitivity in smaller catchments, as rainfall features themselves may not exhibit the necessary heterogeneity in structure to benefit from being resolved at finer scale. Rain cells or bands equal to or greater in size than the catchment over which they rain upon, may well be homogeneous enough in spatial extent and rainfall rate that a `uniform' approximation of their rainfall rate is sufficiently precise enough to represent the rainfall rate at all points in the catchment. As seen in the Boscastle catchment simulations, using a detailed rainfall input data source did not notably alter the outcome of the hydrological predictions (Figures \ref{fig_boscastle_2dplan_flood_ensemble_town}, \ref{fig_ryedale_2dplan_flood_ensemble_town}). In the Ryedale catchment simulations, the hydrological predictions were notably different based on the choice of rainfall input data resolution, affecting both the time and magnitude of the resulting flood peak. 
+Opting to use spatially variable rainfall data at 1 km resolution was sufficient to observe sediment flux sensitivity to rainfall variability in a catchment as small as 12 km\(^2\). However, rainfall features equal to or greater in size than the catchment over which they rain upon may well be homogeneous enough in spatial extent and rainfall rate that a `uniform' approximation of their intensity is sufficient to represent the rainfall rate at all points in the catchment. From a hydrological perspective, as seen in the Boscastle catchment simulations, using a spatially variable rainfall input data source did not notably alter the outcome of the hydrological predictions (Figures \ref{fig_boscastle_2dplan_flood_ensemble_town}, \ref{fig_ryedale_2dplan_flood_ensemble_town}). However, in the Ryedale catchment simulations, the hydrological predictions were notably different based on the choice of rainfall input data resolution, affecting both the timing and magnitude of the resulting flood peak. It is possible that hydrological processes are less sensitive to rainfall spatial variability in smaller catchments than erosional processes are, although further systematic study would be necessary to determine exactly what the threshold catchment size might be where rainfall spatial variability becomes an issue in hydrological models.
 %
 %Talk about size of convective cell features. What is typical storm cell size and heterogeneity (decay from centre?).
 
 \section{Technical advances}
 The numerical simulation work in this project has been made possible by the development of a numerical landscape evolution model suitable for deployment on HPC services (Chapter \ref{chapter_HAIL-CAESAR}). The porting and development of landscape erosion and evolution models for HPC has thus far been under-exploited in the geomorphological modelling community. The development and parallelisation of the HAIL-CAESAR model as part of this thesis is an advancement of existing methods in computational modelling for hydro-geomorphology:
 
-Firstly, the model's basis as a re-write and redevelopment of an existing model (CAESAR-Lisflood) provides a continuity and familiarity with the existing user base. Core functionality is preserved, which will hopefully encourage the uptake in use of the model amongst existing users of the CAESAR-Lisflood model. The translation of the original model's code, preserving the algorithms as closely as possible in a different programming language, ensures there is comparability between the original and redeveloped version of the model presented here. 
+Firstly, the model's basis as a redevelopment of an existing model (CAESAR-Lisflood) provides a continuity and familiarity with the existing user base. Core functionality is preserved, which will hopefully encourage an uptake in use of the model amongst existing users of the CAESAR-Lisflood model. The translation of the original model's code, preserving the algorithms as closely as possible in a different programming language, ensures there is comparability between the original and redeveloped version of the model presented here. 
 
-Secondly, in addition to the speed-up in simulations runtimes observed, the ability to now use HPC facilities to conduct geomorphological modelling studies allows large-scale sensitivity studies to be done, with multiple member `ensemble-style' simulations, in a similar fashion to numerical weather prediction ensemble simulations \citep{sivillo1997ensemble,klein2015variability}. In this study, six-member simulations per case study are are used for the main set of experiments (Table \ref{table_ensemble_experiments}), with ten member simulations used for the parameter sensitivity analysis in Chapter \ref{chapter_flood_model_sensitivity} (Table \ref{table-m-sens}). With sufficient compute resources, much larger ensembler simulations would be possible using the HAIL-CAESAR model.
+Secondly, in addition to the speed-up in simulation runtimes achieved, the ability to now use HPC facilities to conduct hydrogeomorphological modelling studies allows large-scale sensitivity analyses to be done, with multiple member `ensemble-style' simulations, in a similar fashion to numerical weather prediction model ensembles \citep{sivillo1997ensemble,klein2015variability}. In this study, six-member simulations per case study are are used for the main set of experiments (Table \ref{table_ensemble_experiments}), with ten member simulations used for the parameter sensitivity analysis in Chapter \ref{chapter_flood_model_sensitivity} (Table \ref{table-m-sens}). With sufficient computing resources, much larger ensemble simulations would be possible using the HAIL-CAESAR model.
 
 \section{Future work and applications}
-This study has touched upon the potential for using large ensemble-style simulations to assess sensitivity in landscape evolution modelling studies. Since numerical landscape evolution models typically contain a large number of parameters, particularly as they often combine multiple-process sub-models such as erosion, hydrology, hillslope processes, and other surface processes, a thorough exploration of parameter space is beyond the scope of many studies. Current applications of landscape evolution models rarely makes use of multiple-member ensemble simulations, whereas this practice is more commonly found in hydrological modelling \citep{cloke2009ensemble,wong2015sensitivity} and numerical weather prediction \citep{sivillo1997ensemble}, and there is currently an international project (HEPEX) to further the use of ensemble simulations in hydrological predictions \citep{schaake2007hepex}. Hydro-geomorphic and landscape evolution modelling studies have been later adopters of ensemble simulations, but this thesis as well as other projects \citep[e.g.][]{skinner2017lemsi} highlight the timely applicability of ensemble-style simulation for future hydro-geomorphic studies. The HAIL-CAESAR model could be used in this way in future studies to more rigorously assess model sensitivity to user-defined parameters in landscape evolution modelling. The amount of uncertainty present in landscape evolution models is of noted concern \citep{pelletier2015forecasting}, and taking advantage of the increase in computing power in recent decades with the model presented in this thesis would enable a rigorous exploration of model sensitivity to parameter-space, initial model conditions, input data quality, model resolution, and many other sources of potential uncertainty.
+This study has touched upon the potential for using large ensemble-style simulations to assess sensitivity in landscape evolution modelling studies. Since numerical landscape evolution models typically contain a large number of parameters, particularly as they often combine multiple-process sub-models such as erosion, hydrology, hillslope processes, and other surface processes, a thorough exploration of parameter space is usually beyond the scope of many studies. Current applications of landscape erosion and evolution models rarely make use of multiple-member ensemble simulations, whereas this practice is more commonly found in hydrological modelling \citep{cloke2009ensemble,wong2015sensitivity} and numerical weather prediction \citep{sivillo1997ensemble}. Hydrogeomorphic and landscape evolution modelling studies have been late adopters of ensemble simulations, but this thesis as well as other projects \citep[e.g.][]{schaake2007hepex,skinner2017lemsi} highlight the timely applicability of ensemble-style simulations for future hydrogeomorphic research. The HAIL-CAESAR model could be used in this way in future studies to more rigorously assess model sensitivity to user-defined parameters in landscape evolution modelling. Taking advantage of the increase in computing power in recent decades with the HAIL-CAESAR model presented in this thesis would enable a rigorous exploration of model sensitivity to parameter-space, initial model conditions, input data quality, model resolution, and many other sources of potential uncertainty \citep{pelletier2015forecasting}.
 
-Further development of the model would allow it to tackle large catchments at regional to continental scale, or very high resolution studies of smaller river catchments. High resolution topographic data already exists at grid cell spacings 0.2 to 0.5 m, primarily sourced from lidar-dervied topographic data. At this resolution, river channel and other geomorphological features can be resolved in great detail within the model domain. Though the data is readily available now, few modelling studies have yet made use of such high resolution data, partly because of limitations in computational resources and appropriately designed software. Notwithstanding, the HAIL-CAESAR model would require further development to address the scaling issues highlighted in Chapter \ref{chapter_HAIL-CAESAR}, in order to tackle model domains containing millions of grid cells. A new parallelisation strategy would need to be investigated, such as a distributed memory model parallelisation decomposing the model domain among multiple compute nodes. Such work would require a considerable development effort but there are precedents for hydrological models being parallelised in this way before \citep{vivoni2011real}, and many of the techniques could be applied to landscape evolution models.
+Further development of the model would allow it to tackle large catchments at regional to continental scale, or very high resolution studies of smaller river catchments. High resolution topographic data already exists at resolutions of 0.2 to 0.5 m, primarily sourced from LiDAR-dervied topographic data. At this resolution, river channel and other geomorphological features can be resolved in great detail within the model domain. Although the data is readily available now, few modelling studies have yet made use of such high resolution data, partly because of limitations in computational resources and appropriately designed software. Notwithstanding, the HAIL-CAESAR model would require further development to address the scaling issues highlighted in Chapter \ref{chapter_HAIL-CAESAR}, in order to tackle model domains containing tens of millions of grid cells. A new parallelisation strategy would need to be investigated, such as a distributed memory model parallelisation decomposing the model domain among multiple compute nodes. Such work would require a considerable development effort but there are precedents for hydrological models being parallelised in this way before \citep{vivoni2011real}, and many of the techniques could be applied to landscape evolution models such as HAIL-CAESAR.
  
 Predicting catchment response to intense rainfall events is a pressing societal issue. Current flood forecasting applications tend to focus primarily on the hydrological response of catchments without taking into account geomorphological change during such events. Future development of models in the flood-forecasting community could expand them to be more holistic simulators of catchment processes, including sediment erosion and transport, in addition to their core functionally of predicting flood inundation extents. 
 
 \section{Summary}
-This thesis has presented a novel method for simulating hydrological and geomorphological processes at the catchment scale using high-performance computing systems. This method was then applied to investigating the sensitivity of hydro-geomorphic processes to the spatial resolution of rainfall input data and erosional process parameterisation. It was found that while spatial variability in rainfall input data to models can control the hydrological outputs of numerical models, predictions are not necessarily more accurate in all cases when using spatially variable rainfall input data. In terms of predicting sediment fluxes and erosion distribution, the choice of erosion law had a more pronounced effect on sediment fluxes compared to spatially variable rainfall input data. Notwithstanding, the use of spatially variable rainfall data in hydrodynamic landscape evolution models can in some cases better predict localised distribution of erosion within a river catchment. The findings and methodological developments pose a useful contribution to the future of hydrogeomorphological modelling and its applications in environmental prediction and forecasting.
+This thesis has presented a novel method for simulating hydrological and geomorphological processes at the catchment scale using high-performance computing systems. This method was then applied to investigating the sensitivity of hydrogeomorphic processes to the spatial resolution of rainfall input data and erosional process parameterisation. It was found that while spatial variability in rainfall input data to models can affect the hydrological outputs of numerical models, predictions are not necessarily more accurate in all cases when using spatially variable rainfall input data. In terms of predicting sediment fluxes and erosion distribution, the choice of erosion law had a more pronounced effect on sediment fluxes compared to spatially variable rainfall input data. Notwithstanding, the use of spatially variable rainfall data in hydrodynamic landscape evolution models can in some cases better predict localised distribution of erosion within a river catchment. The findings and methodological developments pose a useful contribution to the future of hydrogeomorphological modelling and its applications in environmental prediction and forecasting.
+
+\section{Future applications and development of HAIL-CAESAR}
+
+A number of interested parties have expressed interest in using HAIL-CAESAR for further landscape evolution and hydrological modelling. Future development work is outlined here.
+
+\subsection{Reach mode}
+Development of the model in future would include the development of a `reach-mode' in addition to the `whole-catchment' mode currently implemented in the model. Reach-mode would be a configuration of the model that allows it to simulate localised sections of a river channel and surrounding area. Reach-mode is also feature of the progenitor to the HAIL-CAESAR model, CAESAR-Lisflood, and has applications where detailed simulations are required of particular sections of river channel, but not of the entire catchment. Reach mode (as part of CAESAR-Lisflood) has been employed in a number of studies to date (CITE) and would be a useful addition to the CAESAR modelling community. 
+
+\subsection{Process representation}
+A number of processes in the CAESAR and CAESAR-Lisflood models were omitted in the HAIL-CAESAR development process because of time constraints and applicability to the research questions posed in this thesis. Additional process representation in the HAIL-CAESAR model could be facilitated by the implementation of the following additional subroutines in the model code:
+
+\begin{itemize}
+\item \textbf{Lateral channel erosion}. Currently only downcutting erosion and deosition is represented in the model. The lack of lateral erosion mechanisms was highlighted as a possible limitation in the HAIL-CAESAR model's ability to fully predict the amount and distribution in the Boscastle event documented in Chapter \ref{chapter_erosion}
+
+\item \textbf{Slope processes}. Slope processes in HAIL-CAESAR as well as CAESAR-Lisflood have very simple representations based on simple thrteshold gradients to initiate redistribution of slope material between adjacent cells. A number of more physically realistic slope process models exist that could be incorporated into the HAIL-CAESAR model.
+
+\item \textbf{Groundwater}. Interest has been expressed by the developers of the British Geological Survey's CLiDE model in using HAIL-CAESAR as a basis for the development of a coupled groundwater--catchment hydrology and erosion model for use on HPC services. The groundwater components would be based on the algorithms in the existing CLiDE model, another CAESAR-based model with applications in environmental modelling and prediction \citep{e.g. BARkwith...Nene}.
+
+\item \textbf{MPI parallelisation}. HAIL-CAESAR was parallelised in a way to facilitate the use of multi-member ensemble simulations on sahred-memory compute nodes. This method of parallelisation lends itself well to sensitivity analyses as demonstrated in this thesis, and moderately large domains and high-resolution data. However, to fully exploit the highest resolution datasets available, or to conduct regional to continetal scale modelling studies, a different parallelisation strategy would have to be employed using what is termed `distributed-memory' parallelis, whereby the model domain is decomposed across multiple computing nodes. The most common approach to this is to use a parallelisation standard known as MPI -- the Message Passing Interface. Initial plans for the implementation of HAIL-CAESAR with the MPI software libraries are currently under development. 
+
+There has also been an interest expressed in using part of the HAIL-CAESAR model as an educational tool for teaching MPI parallesation, in part due to the cellular automaton modelling framework being a relatively straighforward modelling technique to parallelise over a 2D domain (Edinburgh Parallel Computing Centre -- personal comms.).
+
+\end{itemize}
