--- a/introduction.tex
+++ b/introduction.tex
@@ -19,9 +19,9 @@ Improving predictions of how catchments respond to intense rainfall, and its imp
 % Rainfall
 Rainfall is perhaps the most straightforward and direct cause of flooding. Where more rain falls in a period of time than can be transported  by a river channel, or stored in other parts of the river catchment, flooding will occur. Indeed, the ``absurdly simple'' concept known as the First Law of Quantitative Precipitation states that the highest rainfall totals are observed where the rainfall rate is highest for the longest period of time \citep{Doswell1996}. Despite its apparent simplicity, rainfall spatial and temporal patterns can be highly variable down to the catchment scale. The susceptibility of catchments to flash flooding from intense rainfall is dependent on the spatial and temporal distribution of rainfall inputs, as well as the physical characteristics of a river catchment, such as its vegetation cover, soil saturation, sediment dynamics, and channel morphology.
 
-During rain storms, the distribution of rainfall varies in time and space. The spatial distribution of rainfall in a storm is dependent on atmospheric conditions such as the distribution and content of moisture in the atmosphere, wind direction and speed, as well as topography, which can lead to the orographic enhancement of rainfall \citep{Roe2003,Roe2005a,Houze2012}. Spatial variability in rainfall patterns is relative to the size of the catchment over which rain falls and the size of the rainfall feature. From the perspective of the stationary river catchment, rainfall spatially variability is also determined by how a rain cell or cells move across a  catchment during the course of the storm \citep{willems2001spatial}. Typically, rainfall events associated with convective activity, such as occurring in the summer months of the UK, have the potential to create the most spatial variability relative to river catchments, due to their geographically focused characteristics. Convective-style rainfall events are also typically associated with the short intense rainfall events that have led to flash flooding in UK catchments \citep{gray1998mesoscale,bell2000sensitivity,Browning2007,blackburn2008large,Kendon2014}, as well as other catchments further afield \citep{doswell1993flash,Doswell1996}. Spatial variability in convective rain cells can vary considerably; generalised models of rain cell structure shows their spatial distribution of rainfall intensities to be described by a Gaussian \citep{luyckx1998influence,willems2001spatial}, or to put it more evocatively, the shape of a ``wizard's cap'' \citep{solyom2007importance}, rainfall intensities peaking sharply in the centre of the cell and then decaying rapidly towards the edges.
+During rain storms, the distribution of rainfall varies in time and space. The spatial distribution of rainfall in a storm is dependent on atmospheric conditions such as the distribution and content of moisture in the atmosphere, wind direction and speed, as well as topography, which can lead to the orographic enhancement of rainfall \citep{Roe2003,Roe2005a,Houze2012}. Spatial variability in rainfall patterns is relative to the size of the catchment over which rain falls and the size of the rainfall feature. From the perspective of the stationary river catchment, rainfall spatially variability is also determined by how a rain cell or cells move across a  catchment during the course of the storm \citep{willems2001spatial}. Typically, rainfall events associated with convective activity, such as occurring in the summer months of the UK, have the potential to create the most spatial variability relative to river catchments, due to their geographically focused characteristics. Convective-style rainfall events are also typically associated with the short intense rainfall events that have led to flash flooding in UK catchments \citep{gray1998mesoscale,bell2000sensitivity,Browning2007,blackburn2008large,Kendon2014}, as well as other catchments further afield \citep{doswell1993flash,Doswell1996}. Spatial variability in convective rain cells can vary considerably; generalised models of rain cell structure shows their spatial distribution of rainfall intensities to be described by a Gaussian distribution \citep{luyckx1998influence,willems2001spatial}, or to put it more evocatively, the shape of a ``wizard's cap'' \citep{solyom2007importance}, with rainfall intensities peaking sharply in the centre of the cell and then decaying rapidly towards the edges.
  
-In summary, there are many sources of rainfall spatial variability during intense rainfall events at a range of scales, yet from the a numerical modelling perspective these are often overlooked in favour of more simplistic treatment of rainfall input. Though some research has been directed at understanding the sensitivity of purely hydrolgical models to rainfall spatial variability \citep{krajewski1991monte,nicotina2008impact,segond2007simulation}, in hydrodynamic landscape erosion and evolution models it remains to be fully investigated.
+In summary, there are many sources of rainfall spatial variability during intense rainfall events at a range of scales, yet from a numerical modelling perspective these are often overlooked in favour of more simplistic treatments of rainfall input. Though some research has been directed at understanding the sensitivity of purely hydrolgical models to rainfall spatial variability \citep{krajewski1991monte,nicotina2008impact,segond2007simulation}, in hydrodynamic landscape erosion and evolution models it remains to be fully investigated.
 
 
 % Now say why this is important and will be investigated here.
@@ -39,28 +39,27 @@ Studying the impact of flash flooding on the landscape has  been of interest to 
 Q_p = CA\overline{R}
 \end{equation}
 
-The Mulvaney equation captures two important components of catchment hydrology: the total catchment area, \(A\), and the maximum catchment-averaged rainfall, \(\overline{R}\), as well as an empirically-derived parameter, \(C\). 
-
-In this thesis I focus on using computer-based numerical models of hydrology and landscape evolution to investigate the sensitivity of hydrology and sediment dynamics to the spatial distribution of rainfall inputs. Computer-based hydrology models have existed almost as long as the modern computing age itself \citep[e.g.][]{beven1979physically}.
+\noindent
+The Mulvaney equation captures two important components of catchment hydrology: the total catchment area, \(A\), and the maximum catchment-averaged rainfall, \(\overline{R}\), as well as an empirically-derived parameter, \(C\).  
 
 %%% Now go on to talk about numerical moels specifically 
 
 %Theoretical applications
-Numerical models have enabled us to address many questions in the theoretical understanding of landscape response to intense rainfall events, such as the influence of stochastic variability in storm intensity and duration \citep{Tucker2000} such as the relative importance of storms in runoff production \citep{Darby2013}  Numerical landscape evolution models have proved useful, if imperfect, tools for the prediction of flooding and landscape change \citep{Tucker2010} both in the short term \citep{beven1984testing}, and in response to longer-duration reponse to changes in rainfall events associated with climate change \citep[e.g][]{coulthard2000modelling,Coulthard2012,hancock2017sediment}.
+Numerical models have enabled us to address many questions in the theoretical understanding of landscape response to intense rainfall events, such as the influence of stochastic variability in storm intensity and duration \citep{Tucker2000} and the relative importance of storms in runoff production \citep{Darby2013}.  Numerical landscape evolution models have proved useful, if imperfect, tools for the prediction of flooding and landscape change \citep{Tucker2010} both in the short term \citep{beven1984testing}, and in response to longer-duration changes in rainfall events associated with climate change \citep[e.g][]{coulthard2000modelling,Coulthard2012,hancock2017sediment}.
 
 %Predictive power
-Predicting the impacts of flash flooding has been aided greatly by the use of numerical models. However, most models, particularly those incorporating landscape erosion processes, typically assume a uniform input of rainfall across the area being studied or simulated. In many meteorological situations, this is unrealistic and does not capture the true spatial and temporal variation in rainfall patterns. As many erosional processes are both a) strongly coupled to hydrological processes \citep{sidle2004hydrogeomorphology,loague2006physics,beven1989floods} and b) threshold dependent \citep{snyder2003importance} or non-linear \citep{coulthard1998non,phillips2003sources}, it follows that numerical models that do not realisitcally capture heterogeneity in rainfall inputs will not accurately predict the distribution of floodwaters and the distribution of erosion during spatially heterogeneous rainfall events.
+Predicting the impacts of flash flooding has been aided greatly by the use of numerical models. However, most models, particularly those incorporating landscape erosion processes, typically assume a uniform input of rainfall across the area being studied or simulated. In many meteorological situations, this is unrealistic and does not capture the true spatial and temporal variation in rainfall patterns. As many erosional processes are both a) strongly coupled to hydrological processes \citep{sidle2004hydrogeomorphology,loague2006physics,beven1989floods} and b) threshold dependent \citep{snyder2003importance} or non-linear \citep{coulthard1998non,phillips2003sources}, it follows that numerical models which do not realisitcally capture heterogeneity in rainfall inputs will not accurately predict the distribution of floodwaters and the distribution of erosion during spatially heterogeneous rainfall events.
 
 
 \subsection{Technical and methodological needs}
 % State technical and methodological needs
-To investigate whether hydrogeomorhpic processes are sensitive to the spatial detail of rainfall patterns, we first need a numerical model that can capture heterogeneity in rainfall inputs, either through the input of rainfall data from external sources, such as weather radar or numerical weather prediction model output, or through synthetic rainfall data generation \citep[e.g.][]{Peleg2014}. The model should be capable of simulating flood inundation and sediment dynamics as well as representing both spatially variable and spatially uniform rainfall inputs. The choice of model could be made from the existing range of landscape evolution models available (Chapter \ref{chapter_landscape_evol}), from developing a new numerical model from scratch, or taking an existing model and extending its functionality beyond simple rainfall representation. A review of rainfall representation in existing landscape evolution models is discussed in Chapter \ref{chapter_RainfallInLEMs}, where the current limitations in existing modelling approaches are highlighted. 
+To investigate whether hydro-geomorhpic processes are sensitive to the spatial detail of rainfall patterns, we first need a numerical model that can capture heterogeneity in rainfall inputs, either through the input of rainfall data from external sources, such as weather radar or numerical weather prediction model output, or through synthetic rainfall data generation \citep[e.g.][]{Peleg2014}. The model should be capable of simulating flood inundation and sediment dynamics as well as representing both spatially variable and spatially uniform rainfall inputs. The choice of model could be made from the existing range of landscape evolution models available (Chapter \ref{chapter_landscape_evol}), from developing a new numerical model from scratch, or taking an existing model and extending its functionality beyond simple rainfall representation. A review of rainfall representation in existing landscape evolution models is discussed in Chapter \ref{chapter_RainfallInLEMs}, where the current limitations in existing modelling approaches are highlighted. 
 
 
 \section{Thesis aims and structure}
 % Talk about thesis aims and structure.
 \subsection{Aims}
-The aims of this thesis are divided into two endeavours: firstly to address the technological and methodological needs outline previously through the development of a suitable numerical landscape evolution model, secondly, to use this model to investigate the sensitivity of flood inundation predictions to rainfall heterogeneity and erosional parameterisation within the model. In the context of this thesis, sensitivity to rainfall spatial variability is evaluated in terms of comparing spatially average rainfall data with high-resolution rainfall radar data (Chapter \ref{chapter_metdata}). Sensitivity to erosion law parameterisation, for the purposes of the simulations carried out is assessed through varying the choice of erosion and sediment transport laws available in the numerical model, described in Chapter \ref{chapter_HAIL-CAESAR}. The thesis aims can be summarised as follows:
+The aims of this thesis are twofold: firstly to address the technological and methodological needs outlined previously through the development of a suitable numerical landscape evolution model, secondly, to use this model to investigate the sensitivity of flood inundation predictions to rainfall heterogeneity and erosional parameterisation within the model. In the context of this thesis, sensitivity to rainfall spatial variability is evaluated in terms of comparing spatially uniform rainfall data with high-resolution rainfall radar data (Chapter \ref{chapter_metdata}). Sensitivity to erosion law parameterisation, for the purposes of the simulations carried out is assessed through varying the choice of erosion and sediment transport laws available in the numerical model, described in Chapter \ref{chapter_HAIL-CAESAR}. The thesis aims can be summarised as follows:
 
 \begin{enumerate}
 \item Develop and test a landscape evolution model capable of simulating landscape erosion and flood inundation, incorporating high-resolution rainfall data meteorological data inputs such as rainfall radar or numerical weather prediction model output. %(Chapter \ref{chapter_HAIL-CAESAR}).
@@ -80,8 +79,8 @@ The aims of this thesis are divided into two endeavours: firstly to address the 
 
 \subsection{Structure}
 
-Following this introductory chapter, Chapter \ref{chapter_landscape_evol}\footnote{An extended version of Chapter \ref{chapter_landscape_evol} was published in the British Society for Geomorphology's \textit{Geomorphological Techniques} collection of technical review papers \citep{valters2016modelling}} presents an overview of landscape erosion and evolution models (LEMs), their underlying principles and implementation including a discussion of the capabilities and limitations of current landscape evolution models. Chapter \ref{chapter_RainfallInLEMs} reviews the current approaches in the numerical modelling literature to represent rainfall and rainfall spatial variability in landscape evolution models, and highlights the current limitations in such approaches. The current research questions in hydro-geomorphological sensitivity to rainfall spatial variability are discussed in tandem with the technical developments required in numerical models to better address these questions. Chapter \ref{chapter_metdata} presnts an overview of rainfall radar data sources, with a focus on data products available in the UK. Based on the discussion and conclusions in Chapter \ref{chapter_RainfallInLEMs}, it was decided to re-develop an existing model and extend its functionality to enable ensemble simulations on high-performance computing (HPC) services, integrating high-resolution rainfall radar as input data to the model. The technical development of the model is discussed in Chapter \ref{chapter_HAIL-CAESAR} and the performance and parallel scalability of the model code is assessed. The investigation of aims 2) and 3) is presented in the remaining chapters: Chapter \ref{chapter_events} presents two case studies of flash flooding in the UK, which are used in the following Chapters to investigate hydrogeomorphic sensitivity to rainfall spatial heterogeneity and erosion process parameterisation. The meteorological background and impact of
-the two events is described and the set-up of the numerical modelling experiments is presented. Chapter \ref{chapter_flood_model_sensitivity} assesses how the flood-inundation component of the model is sensitive to the choice of erosional process parameterisation and to the resolution of rainfall input data. Chapter \ref{chapter_hydrogeomorph} focuses on how sediment flux and the spatial distribution of erosion during an intense rainfall event is sensitive to both the choice of erosion law and the resolution of rainnfall input data. A further discussion and conclusion, synthesising the results of the preceding chapters is presented in Chapter \ref{chapter_conclusion}.
+Following this introductory chapter, Chapter \ref{chapter_landscape_evol}\footnote{An extended version of Chapter \ref{chapter_landscape_evol} was published in the British Society for Geomorphology's \textit{Geomorphological Techniques} collection of technical review papers \citep{valters2016modelling}. A reprint of the article is presented in Appendix \ref{appendix_paper}.} presents an overview of landscape erosion and evolution models (LEMs), their underlying principles and implementation including a discussion of the capabilities and limitations of current landscape evolution models. Chapter \ref{chapter_RainfallInLEMs} reviews the current approaches in the numerical modelling literature to represent rainfall and rainfall spatial variability in landscape evolution models, and highlights the current limitations in such approaches. The current research questions in hydro-geomorphological sensitivity to rainfall spatial variability are discussed in tandem with the technical developments required in numerical models to better address these questions. Chapter \ref{chapter_metdata} presents an overview of rainfall radar data sources, with a focus on data products available in the UK. Based on the discussion and conclusions in Chapter \ref{chapter_RainfallInLEMs}, it was decided to re-develop an existing model and extend its functionality to enable ensemble simulations on high-performance computing (HPC) services, using high-resolution rainfall radar as input data to the model. The technical development of the model is discussed in Chapter \ref{chapter_HAIL-CAESAR} and the performance and parallel scalability of the model code is assessed. The investigation of aims 2) and 3) is presented in the remaining chapters: Chapter \ref{chapter_events} presents two case studies of flash flooding in the UK, which are used in the following chapters to investigate hydro-geomorphic sensitivity to rainfall spatial heterogeneity and erosion process parameterisation. The meteorological background and impact of
+the two events is described and the set-up of the numerical modelling experiments is presented. Chapter \ref{chapter_flood_model_sensitivity} assesses how the flood-inundation component of the model is sensitive to the choice of erosional process parameterisation and to the resolution of rainfall input data. Chapter \ref{chapter_hydrogeomorph} focuses on how sediment flux and the spatial distribution of erosion during an intense rainfall event is sensitive to both the choice of erosion law and the resolution of rainfall input data. A further discussion and conclusion, synthesising the results of the preceding chapters is presented in Chapter \ref{chapter_conclusion}.
 
 %Restatement of the problem: With this more fulsome treatment of context in mind, the reader is ready to hear a restatement of the problem and significance; this statement will echo what was said in the opening, but will have much more resonance for the reader who now has a deeper understanding of the research context.
 
