--- a/literature.bib
+++ b/literature.bib
@@ -3993,7 +3993,7 @@ DOI = {10.5194/hess-2016-530}
 }
 @article{doswell1996flash,
   title={Flash flood forecasting: An ingredients-based methodology},
-  author={Doswell III, Charles A and Brooks, Harold E and Maddox, Robert A},
+  author={Doswell, Charles A and Brooks, Harold E and Maddox, Robert A},
   journal={Weather and Forecasting},
   volume={11},
   number={4},
@@ -5506,4 +5506,33 @@ title = {{Discharge, discharge variability, and the bedrock channel profile}},
 url = {http://doi.wiley.com/10.1029/2004JF000259},
 volume = {110},
 year = {2005}
+}
+@article{germann2006radar,
+  title={Radar precipitation measurement in a mountainous region},
+  author={Germann, Urs and Galli, Gianmario and Boscacci, Marco and Bolliger, Martin},
+  journal={Quarterly Journal of the Royal Meteorological Society},
+  volume={132},
+  number={618},
+  pages={1669--1692},
+  year={2006},
+  publisher={Wiley Online Library}
+}
+@article{rico2008classification,
+  title={Classification of ground clutter and anomalous propagation using dual-polarization weather radar},
+  author={Rico-Ramirez, Miguel Angel and Cluckie, Ian David},
+  journal={IEEE Transactions on Geoscience and Remote Sensing},
+  volume={46},
+  number={7},
+  pages={1892--1904},
+  year={2008},
+  publisher={IEEE}
+}
+@article{pellarin2002hydrologic,
+  title={Hydrologic visibility of weather radar systems operating in mountainous regions: Case study for the Ardeche catchment (France)},
+  author={Pellarin, Thierry and Delrieu, Guy and Saulnier, Georges-Marie and Andrieu, Herv{\'e} and Vignal, Bertrand and Creutin, Jean-Dominique},
+  journal={Journal of Hydrometeorology},
+  volume={3},
+  number={5},
+  pages={539--555},
+  year={2002}
 }
