--- a/thesis.tex
+++ b/thesis.tex
@@ -15,7 +15,7 @@
 %\includeonly{chapter_metdatamodels}
 %\includeonly{conclusions}
 %\includeonly{chapter_LEMs}
-
+%\includeonly{chapter_hailcaesar}
 
 
 \usepackage{rotating}
@@ -27,7 +27,8 @@
 \usepackage[dvipsnames]{xcolor}
 \usepackage{textcomp}
 \usepackage{hyperref}
-\hypersetup{colorlinks=true,allcolors={blue!50!black}}
+\hypersetup{colorlinks=true,allcolors={black}}
+%\hypersetup{colorlinks=true,allcolors={blue!50!black}}
 \usepackage{hypcap}
 \usepackage{gensymb}  % degree symbol
 \usepackage{subcaption}
